--- a/web/index.html
+++ b/web/index.html
@@ -54,5 +54,28 @@
       });
     });
   </script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.11.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.11.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyDBWrArhIcX-SHpZ_a_XlrMEsBCPaRNc_Q",
+      authDomain: "nsi-qc.firebaseapp.com",
+      projectId: "nsi-qc",
+      storageBucket: "nsi-qc.appspot.com",
+      messagingSenderId: "630622279871",
+      appId: "1:630622279871:web:06a47182eabd7355a14e0a",
+      measurementId: "G-558Y5FGKHV"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 </body>
 </html>
